--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<script src='./script.js' defer></script>
     </head>
     <body>
-	<div class='prova'>
+	<div class='shelves'>
+	    <h1>Book Library</h1>
 	</div>
     </body>
 </html>
