--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
 	<script src='./script.js' defer></script>
     </head>
     <body>
+	<button class='newBookBtn' type='button'>+</button>
+	<h1>Book Library</h1>
 	<div class='shelves'>
-	    <h1>Book Library</h1>
 	</div>
+	<dialog class='newBookForm'>
+	    <h2>Add a new Book</h2>
+	    <label for='title'>Title:</label>
+	    <input type='text' id='title' name='title'>
+	    <label for='author'>Author:</label>
+	    <input type='text' id='author' name='author'>
+	    <label for='pages'>Pages:</label>
+	    <input type='number' id='pages' name='pages'>
+	    <label for='read'>Read:</label>
+	    <input type='checkbox' id='read' name='read'>
+	</dialog>
     </body>
 </html>
