Added a dialog to add new books, buttons to modify cards status

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	    <input type='number' id='pages' name='pages'>
 	    <label for='read'>Read:</label>
 	    <input type='checkbox' id='read' name='read'>
+	    <button type='button' class='cancelFormBtn'>Cancel</button>
+	    <button type='button' class='confirmFormBtn'>Confirm</button>
 	</dialog>
     </body>
 </html>
